--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "gatsby": "^5.12.1",
+    "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-sass": "^6.12.0",
+    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-transformer-sharp": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.66.1"
