--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "inappstory",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "InAppStory landing page",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
