--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "gatsby-cli": "^5.12.4",
     "typescript": "^5.2.2"
   }
 }
